--- a/FileTransferPackage/templates/login.html
+++ b/FileTransferPackage/templates/login.html
@@ -41,6 +41,9 @@
                     <div class="form-group">
                         {{ render_field(form.password) }}
                     </div>
+		    <div class="form-group">
+			{{ render_field(form.token) }}
+		    </div>
                     <div class="form-check">
                         {{ form.remember(class="form-check-input") }}
                         {{ form.remember.label(class="form-check-label") }}
