--- a/FileTransferPackage/templates/create_account.html
+++ b/FileTransferPackage/templates/create_account.html
@@ -3,7 +3,7 @@
     <div class="content-section">
         {% from "includes/_formhelpers.html" import render_field %}
         <form method="POST" action="">
-            {{ form.hidden_tag() }}
+            {{ form.hidden_tag() }} <!-- Protect against(prevent) Cross-Site Request Forgery(CSRF, XSRF) attack -->
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{{ title }}</legend>
                 <div class="form-group"> {{ render_field(form.name) }} </div>
