--- a/FileTransferPackage/templates/edit_req.html
+++ b/FileTransferPackage/templates/edit_req.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     {% from "includes/_formhelpers.html" import render_field %}
     <form method="POST" action="" enctype="multipart/form-data">
-      {{ form.hidden_tag() }}
+      {{ form.hidden_tag() }} <!-- Protect against(prevent) Cross-Site Request Forgery(CSRF, XSRF) attack -->
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">{{ title }}</legend>
            
