--- a/FileTransferPackage/templates/reset_request.html
+++ b/FileTransferPackage/templates/reset_request.html
@@ -33,9 +33,11 @@
             <form method="POST" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Reset Password</legend>
+		    <legend class="border-bottom mb-2"><h5>Reset Password</h5></legend>
                     
                     <div class="form-group"> {{ render_field(form.email) }} </div>
+		    {{ captcha() }} <!-- This renders an <img> tag with the captcha img. -->
+		    <div class="form-group"> {{ render_field(form.captcha) }} </div>
                     
                 </fieldset>
                 <div class="form-group">
